1.0 "Asieoniezi"

0.129 "Benson & Hedges Moscow Gold"
 428578 Crash when trying to post a supersede (Stephane Gregoire)
 434502 changing pane in tabbed mode (Lanif)
 432387 0.128 crash / memory corruption (Jeremy, Pav Lucistnik)
 432289 sometimes queued tasks never decode (Calin)
 419199 wrap should not be mandatory (Bill Baker)
 090594 add option to always spawn editor when composign (Gauze)

0.128 "SR/CL: Leitmotiv: Toynbee Idea"
 431247 "Add a Scoring Rule" crashes if no article is selected (Christophe)
 432023 0.127 crashes when loading corrupted groups (Charles)
 432024 Speed improvements when saving and loading groups (Charles)
 431552 0.127 no longer stops downloading when disk is full (Alan Olsen)
 430958 Get N Headers fails if group has small # of headers (Anon)
 429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
 429485 Articles marked read showing back up (Frank Tabor)
 407301 All new articles are shown, regardless of score (Per Hedeland)

0.127 "Eckythump"
 428151 Compilation error in e-util.cc under fink (SciFi)
 424381 Pango warnings from attachments with accented chars (SciFi)
 427230 Sigfiles with CR/LFs not handled properly (Artur Jachacy)
 393589 X-Face not shown properly (Ivan Rajkovic)
 425993 Crash when downloading new headers in 0.126 (Drew Yavor)
 427212 Crash when hitting 'read more' when no group loaded (Duncan)
 424240 Downloading headers from the command line (Eric Lauriault)
 424248 In --nogui mode, exit when the last task finishes. (Eric Lauriault)
 427165 Task pane's ETA wrong on new xover tasks (Charles)
 426375 Task pane's ETA wrong when selecting > 4GB of queued files (Mike)

0.126 "Demon Sweat"
 420618 Decode in a worker thread for faster GUI/network (Calin Culanu)
 423376 Status Bar's "tasks" and "log" buttons toggle the windows (Walt)
 411446 Use `Message-ID', not `Message-Id', when posting (Charles)
 411447 Header pane loses selection when deleting articles (Jeff Berman)