@@ -1,6 +1,7 @@
 1.0 "Asieoniezi"
 
 0.129 "Benson & Hedges Moscow Gold"
+ 436101 RFE: add nzb filter to 'import nzb' dialog (Frederic Crozat)
  428578 Crash when trying to post a supersede (Stephane Gregoire)
  434502 changing pane in tabbed mode (Lanif)
  432387 0.128 crash / memory corruption (Jeremy, Pav Lucistnik)
